[package]
name = "dbstate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
async-trait = "^0.1"
tokio = { version = "^1.21", features = [ "macros" ] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres", "chrono" ] }
futures = "^0.3"
serde = "^1"
serde_json = "^1"
env_logger = "^0.9"
clap = "^4.0"
chrono = "*"
multimap = { version = "^0.8", features = [ "serde" ]}
